@@ -43,6 +43,8 @@ if($_POST['action']!="delete") {
     	if(!is_numeric($_POST['app_lock_wait']))                                                            { $error[] = "Invalid wait value"; }
     	elseif ($_POST['app_lock_wait']<1)                                                                  { $error[] = "Invalid wait value"; }
 	}
+	# api_allow_unsafe check
+	if($_POST['app_security']=="none" && $api_allow_unsafe!==true)											{ $error[] = "API server requires SSL. Please set $api_allow_unsafe in config.php to override"; }
 }
 
 # default lock_wait
