@@ -791,6 +791,19 @@ $upgrade_queries["1.4.13"][] = "ALTER TABLE `users` ADD `compress_actions` TINYI
 
 
 
+#
+# Subversion 1.4.14 queries
+#
+$upgrade_queries["1.4.14"][] = "-- Database version bump";
+$upgrade_queries["1.4.14"][] = "UPDATE `settings` set `dbversion` = '14';";
+$upgrade_queries["1.4.14"][] = "-- Change API security";
+$upgrade_queries["1.4.14"][] = "ALTER TABLE `api` CHANGE `app_security` `app_security` SET('ssl_code','ssl_token','crypt','user','none','ssl') CHARACTER SET utf8  COLLATE utf8_general_ci  NOT NULL  DEFAULT 'ssl_token'";
+$upgrade_queries["1.4.14"][] = "UPDATE `api` set `app_security` = 'ssl_token' where `app_security` = 'ssl'";
+$upgrade_queries["1.4.14"][] = "ALTER TABLE `api` CHANGE `app_security` `app_security` SET('ssl_code','ssl_token','crypt','user','none') CHARACTER SET utf8  COLLATE utf8_general_ci  NOT NULL  DEFAULT 'ssl_token'";
+$upgrade_queries["1.4.14"][] = "ALTER TABLE `api` ADD `app_last_access` DATETIME  NULL";
+
+
+
 // output if required
 if(!defined('VERSION') && php_sapi_name()=="cli") {
   // version check
